# kcl

./: ADOPTERS.md  Makefile  pyproject.toml
crates/parser/src/parser/: stmt.rs
crates/query/src/: override.rs
crates/runtime/src/value/: val_attr.rs
crates/sema/src/resolver/: node.rs
crates/tools/benches/proc_macro_crate/src/: lib.rs
tmp/: MIGRATION_NOTES.md  patch_test_grammar.sh
