[project]
name = "kcl"
version = "0.1.0"
description = "KCL - A constraint-based record and functional language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.8.0",
    "ruamel-yaml>=0.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests/runtime"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
